Alternate_Kubernetes_Version/frontend-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-frontend
  labels:
    app: appointment-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: appointment-frontend
    spec:
      containers:
      - name: appointment-frontend
        image: soberservicesguy/portfolio-images:appointment_frontend
        ports:
          - containerPort: 80
            name: http-port
        resources:
          limits:
            cpu: "50m"
            memory: "150Mi"
      imagePullSecrets:
      - name: regcred
  selector:
    matchLabels:
      app: appointment-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-frontend-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: appointment-frontend
  type: NodePort
