Alternate_Kubernetes_Version/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-world.info
    # - host: localhost
      http:
        paths:
          - path: /timetables/
            pathType: Prefix
            backend:
              service:
                name: timetable-service
                port:
                  number: 5001                  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appointment-frontend-service
                port:
                  number: 80
